@startuml domain model
skinparam DefaultFontName Arial
skinparam DefaultFontSize 16
skinparam DefaultFontStyle bold
skinparam ArrowThickness 2.5
!theme toy

title domain model

package "<<aggregate>> Building"{

    entity Building <<entity>><<root>>{
        code
        name
        dimensions
    }

}

package "<<aggregate>> Elevator"{

    entity Elevator <<entity>><<root>>{
        designation
    }

}

package "<<aggregate>> Floor"{
    entity Floor <<entity>>{
        number
        information
        code
    }
}

package "<<aggregate>> Room"{
    entity Room <<entity>>{
        number
    }
}

package "<<aggregate>> Passage"{
    entity Passage <<entity>>{
        designation
    }
}


package "<<aggregate>> User"{
    entity User <<entity>><<root>>{
        name
        email
        password
        nif
        phoneNumber
    }
}

package "<<aggregate>> Robot"{
    entity Robot <<entity>><<root>>{
        identification
        nickname
        serialNumber
        description
        state
    }
}

package "<<aggregate>> RobotType"{
    entity RobotType <<entity>><<root>>{
        type
        brand
        model
    }
}

package "<<aggregate>> Role"{
    entity Role <<entity>><<root>>{
        name
    }
}

package "<<aggregate>> Task"{
    entity Task <<entity>><<root>>{
        path
        robotMovements
        isCompleted
        taskType
    }
}

package "<<aggregate>> SurveillanceTask" {
    entity SurveillanceTask <<entity>><<root>> {
        phoneNumber
    }
}

package "<<aggregate>> PickupDeliveryTask" {
    entity PickupDeliveryTask <<entity>><<root>> {
        pickupPlace
        deliveryPlace
        pickupPersonName
        deliveryPersonName
        pickupPersonPhoneNumber
        deliveryPersonPhoneNumber
        taskDescription
        confirmationCode
    }
}

package "<<aggregate>> Planning"{
    entity Planning <<entity>><<root>>{
        cost
    }
}


package "<<aggregate>> TaskType"{
    entity TaskType <<entity>><<root>>{
        name
        description
    }
}

' connections
'user
User "*" --- "1" Role: has >

' building
Floor "*" --- "1" Building: is associated >

' elevator
Elevator "1" --- "*" Floor: can operate >

' floor
Room "*" --- "1" Floor: is on >

'passage
Passage "*" --- "1" Floor: from >
Passage "*" --- "1" Floor: to >

' task
Task "*" --- "1" User: is requested by >

' surveillanceTask
SurveillanceTask "*" --- "*" Floor: makes surveillance to >

' pickupDeliveryTask
PickupDeliveryTask "*" --- "1" Room: has a pickup place >
PickupDeliveryTask "*" --- "1" Room: has a delivery place >

' planning
Planning "*" --- "*" Task: have many >
Planning "*" --- "1" User: is planned by >


' robot
Robot "*" --- "1" RobotType: has a >
Robot "*" --- "1" TaskType: is allowed to >

' robotType
RobotType "*" --- "*" TaskType: is allowed >


' inheritance
Task <|-- SurveillanceTask
Task <|-- PickupDeliveryTask


@enduml


